--- a/index.html
+++ b/index.html
@@ -18,5 +18,31 @@
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <section class="cards-container">
+      <div class="card card-orange">
+        <img src="./assets/icon-sedans.svg" alt="Sedan car icon" />
+        <h2 class="card-title">Sedans</h2>
+        <p class="card-description">
+          Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your
+          next road trip
+        </p>
+      </div>
+      <div class="card card-cyan">
+        <img src="./assets/icon-suvs.svg" alt="SUV car icon" />
+        <h2 class="card-title">SUVS</h2>
+        <p class="card-description">
+          Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and
+          off-road adventures.
+        </p>
+      </div>
+      <div class="card card-dark-cyan">
+        <img src="./assets/icon-luxury.svg" alt="Luxury car icon" />
+        <h2 class="card-title">Luxury</h2>
+        <p class="card-description">
+          Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and
+          arrive in style.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
