Cards coded, not responsive

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="./assets/favicon-32x32.png" type="image/x-icon" />
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="base.css" />
+    <link rel="stylesheet" href="buttons.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,6 +27,7 @@
           Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your
           next road trip
         </p>
+        <button class="btn btn-primary btn-orange-text">Learn More</button>
       </div>
       <div class="card card-cyan">
         <img src="./assets/icon-suvs.svg" alt="SUV car icon" />
@@ -34,6 +36,7 @@
           Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and
           off-road adventures.
         </p>
+        <button class="btn btn-primary btn-cyan-text">Learn More</button>
       </div>
       <div class="card card-dark-cyan">
         <img src="./assets/icon-luxury.svg" alt="Luxury car icon" />
@@ -42,6 +45,7 @@
           Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and
           arrive in style.
         </p>
+        <button class="btn btn-primary btn-dark-cyan-text">Learn More</button>
       </div>
     </section>
   </body>
